external.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: external
---

apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: qq-external
  namespace: external
spec:
  hosts:
    - www.qq.com
  ports:
    - number: 80
      name: http
      protocol: HTTP
    - number: 443
      name: tls
      protocol: TLS
  resolution: DNS
  location: MESH_EXTERNAL
  exportTo:
  - "*"
---

apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: baidu-external
  namespace: external
spec:
  hosts:
    - www.baidu.com
  ports:
    - number: 80
      name: http
      protocol: HTTP
    - number: 443
      name: tls
      protocol: TLS
  resolution: DNS
  location: MESH_EXTERNAL
  exportTo:
  - "*"
---
