gateway.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: egressdemo-gw
  namespace: istio-system
spec:
  selector:
    app: istio-egressgateway-1
    istio: egressgateway
  servers:
    - hosts:
        - "*"
      port:
        name: http
        number: 8080
        protocol: HTTP
---

apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: egressdemo-gw-vs
  namespace: istio-system
spec:
  gateways:
  - istio-system/egressdemo-gw
  hosts:
  - "*"
  http:
  - match:
    - authority:
        prefix: "www.qq.com"
        #regex: ".*qq\.com\:80"
    route:
    - destination:
        host: "www.qq.com"
        port:
          number: 80
  - match:
    - authority:
        prefix: "www.baidu.com"
    route:
    - destination:
        host: "www.baidu.com"
        port:
          number: 80
---
